test/assets/invalid/application/swap-first-two.hs
a :: Int
a = b 'a' 1 [3]

b :: Int -> Char -> [Int] -> Int
b _ _ _ = 1